[gd_scene load_steps=4 format=3 uid="uid://cqox37lu8ao0q"]

[ext_resource type="Texture2D" uid="uid://c80vnyxnmukwl" path="res://zMINIGAMES/Jogo das Perguntas/assets/quests.png" id="1_cr4dj"]
[ext_resource type="Script" uid="uid://k1b2dku547ca" path="res://zMINIGAMES/Jogo das Perguntas/scripts/backToMenuQ3.gd" id="2_cr4dj"]
[ext_resource type="Script" uid="uid://8oyx18sdvm4o" path="res://zMINIGAMES/Jogo das Perguntas/scripts/nextQuestion.gd" id="2_i230q"]

[node name="Quests" type="Area2D"]

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.75, 0.632812)
texture = ExtResource("1_cr4dj")

[node name="3Button" type="Button" parent="."]
offset_left = 211.0
offset_top = 189.0
offset_right = 511.0
offset_bottom = 289.0
text = "A) Errada"
script = ExtResource("2_cr4dj")

[node name="3Button2" type="Button" parent="."]
offset_left = 544.0
offset_top = 189.0
offset_right = 844.0
offset_bottom = 289.0
text = "B) Certa
"
script = ExtResource("2_i230q")

[node name="3Button3" type="Button" parent="."]
offset_left = 210.0
offset_top = 338.0
offset_right = 510.0
offset_bottom = 438.0
text = "C) Errada"
script = ExtResource("2_cr4dj")

[node name="3Button4" type="Button" parent="."]
offset_left = 544.0
offset_top = 338.0
offset_right = 844.0
offset_bottom = 438.0
text = "D) Errada"
script = ExtResource("2_cr4dj")

[node name="Label" type="Label" parent="."]
offset_left = 202.0
offset_top = 60.0
offset_right = 853.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 48
text = "ESCREVA AQUI A PERGUNTA"

[connection signal="pressed" from="3Button" to="3Button" method="_on_pressed"]
[connection signal="pressed" from="3Button2" to="3Button2" method="_on_button_2_pressed"]
[connection signal="pressed" from="3Button3" to="3Button3" method="_on_button_3_pressed"]
[connection signal="pressed" from="3Button4" to="3Button4" method="_on_button_4_pressed"]
